--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "net.serenity-bdd.serenity-gradle-plugin" version "3.5.1"
+    id("net.serenity-bdd.serenity-gradle-plugin") version "3.6.7"
     id 'java'
     id 'eclipse'
     id 'idea'
@@ -14,8 +14,9 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+
 ext {
-    slf4jVersion = '1.7.7'
+    slf4jVersion = '2.0.0'
     serenityCoreVersion = '3.5.1'
     junitVersion = '5.8.2'
     assertJVersion = '3.22.0'
@@ -23,7 +24,10 @@ ext {
 }
 
 dependencies {
-    testImplementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
+    implementation"org.slf4j:slf4j-api:${slf4jVersion}",
+                "org.slf4j:slf4j-simple:${slf4jVersion}",
+                "org.slf4j:log4j-over-slf4j:${slf4jVersion}",
+                "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
                 "net.serenity-bdd:serenity-junit5:${serenityCoreVersion}",
                 "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
                 "net.serenity-bdd:serenity-ensure:${serenityCoreVersion}",
@@ -31,12 +35,12 @@ dependencies {
                 "net.serenity-bdd:serenity-cucumber:${serenityCoreVersion}",
                 "org.junit.jupiter:junit-jupiter-api:${junitVersion}",
                 "org.assertj:assertj-core:${assertJVersion}",
-                "ch.qos.logback:logback-classic:${logbackVersion}"
+                "ch.qos.logback:logback-classic:${logbackVersion}",
+                'com.googlecode.json-simple:json-simple:1.1.1'
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
 
 test {
-    useJUnitPlatform()
     testLogging.showStandardStreams = true
     systemProperties System.getProperties()
 }
