--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,16 +1,17 @@
 serenity {
-    take.screenshots = FOR_FAILURES
+    take.screenshots = FOR_EACH_ACTION
 }
 
-headless.mode = true
+headless.mode = false
+
 webdriver {
   driver = chrome
   capabilities {
     browserName = "chrome"
     acceptInsecureCerts = true
     "goog:chromeOptions" {
-      args = ["test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=1000,800",
-        "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
+      args = ["test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=full-scream",
+        "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking","--remote-allow-origins=*"]
     }
   }
 }
